syntax = "proto3";
option java_multiple_files = true;
option java_package = "shoppingcart.video";

message Chunk {
  string mime_type = 1;
  bytes payload = 2;
}

message Ack {
  string message = 1;
}

message ContextIds {
  string ai_context_id = 1;
  string cart_id = 2;
}

message StreamInput {
  oneof content {
    ContextIds context_ids = 1;
    Chunk chunk = 2;
  }
}

service VideoServiceEndpoint {
  rpc StreamVideo (stream StreamInput) returns (stream Ack);
}